# semantic-hashing-demo

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
benchmarks/: run_10_4a.txt  run_10_4b.txt  run_10_4c.txt  run_10_4d.txt  run_10_8a.txt  run_10_8b.txt  run_10_8c.txt
data/: fine_food_reviews_1k.csv  paragraphs.csv
output/: buckets_128bit.csv  buckets_16bit.csv  buckets_32bit.csv  buckets_64bit.csv  buckets_8bit.csv  matrix_128.csv  matrix_16.csv  matrix_32.csv  matrix_64.csv  matrix_8.csv  paragraphs_processed.csv  plot_matrix_128.html  plot_matrix_16.html  plot_matrix_32.html  plot_matrix_64.html  plot_matrix_8.html
src/semantic_hashing_demo/: config.py  detection.py  generate_data.py  input.py  lsh.py  main.py  main2.py  preprocessing.py  process_generated_data.py  utils.py
tests/: 20_4_2a2.txt  20_4_2b1.txt  20_4_2c1.txt  20_8_2a2.txt  20_8_2b2.txt  20_8_2c2.txt  20_8_3a4.txt  20_8_3b2.txt  20_8_3c4.txt  20_8_4r1.txt  20_8_4r2.txt  20_8_4r3.txt  40_4_3a.txt  40_4_3a2.txt  40_4_3a3.txt  40_4_3b.txt  40_4_3b2.txt  40_4_3b3.txt  40_4_3c.txt  40_4_3c2.txt  40_4_3c3.txt  README.md  test_version.py
