[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-hashing-demo"
version = "0.0.1"
description = ""
dependencies = [
    "openai ==1.12.0",
    "numpy ==1.26.4",
    "pyarrow ==15.0.0",
    "polars ==0.20.10",
]

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "ruff==0.2.1",
    "mypy==1.8.0",
]

[tool.huak.task]
main = "python3 src/semantic_hashing_demo/main.py"
