[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-hashing-demo"
version = "0.0.1"
description = ""
dependencies = [
    "marvin ==2.1.5",
    "numpy ==1.26.4",
    "openai ==1.12.0",
    "polars ==0.20.10",
    "pyarrow ==15.0.0",
    "plotly ==5.19.0",
    "pandas ==2.2.1",
    "nbformat ==5.9.2",
]

[project.optional-dependencies]
dev = [
    "build ==1.0.3",
    "mypy ==1.8.0",
    "ruff ==0.2.1",
]

[tool.huak.task]
preprocess = "python3 src/semantic_hashing_demo/preprocessing.py"
detect = "python3 src/semantic_hashing_demo/detection.py"
generate = "python3 src/semantic_hashing_demo/generate_data.py"
post_generate = "python3 src/semantic_hashing_demo/process_generated_data.py"
